@@ -1,4 +1,5 @@
 Development
+    Fix some problems with streaming media
     Prevent Drag n Drop reordering in playlist view
     Fix image rescale issue, when mplayer display sizes are different than info values
     Prevent PostProcessing filters from activating with vdpau or xvmc vo's
